--- a/contactpage.html
+++ b/contactpage.html
@@ -38,7 +38,7 @@
         <h1>Connect With Me</h1>
         <p>
           I would love to get in touch with you. Don't hesitate to contact me
-          down below.
+          down below!
         </p>
         <p class="intro">Email: ismiiihanaaa@gmail.com</p>
         <p class="intro">Contact number :+46 977 321 8777</p>
