--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main>
       <img
         class="main-img"
-        src="img/Snapchat-1507909075.jpg"
+        src="Img/Snapchat-1507909075.jpg"
         alt="Picture of me"
       />
       <h1>Welcome to Ismihana's life</h1>
